syntax = "proto3";

package proto;

message PushRequest {
    string UserID = 1;
    string PluginID = 2;
    string Data = 3;
}

message EmptyPushResponse {
}

service JobsService {
    rpc Push(PushRequest) returns (EmptyPushResponse) {}
}